--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp",
-    "start-heroku": "node server"
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
     "jquery": "^3.6.0",
-    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-resize": "^1.0.1",
     "vue-router": "^3.2.0",
